fixed height on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,27 +13,15 @@
     src: url("./fonts/LucidaGrande-Light.otf") format("opentype");
 }
 
-:root {
-    --doc-height: 100%;
-}
-
 body {
+    height: 100%;
     margin: 0;
     box-sizing: border-box;
-    min-height: 100vh;
-    min-height: fill-available;
-    min-height: -webkit-fill-available;
     overscroll-behavior: contain;
 }
 
-html {
-    height: fill-available;
-    height: -webkit-fill-available;
-}
-
 #root {
-    height: var(--doc-height);
-    width: 100vw;
+    height: 100%;
 }
 
 canvas {
